config new seach list transaction
